# fastapi-service-auth

./: CHANGELOG.md  pyproject.toml
src/data/exceptions/: auth.py  email.py
src/data/protocols/cryptography/: hasher.py
src/data/protocols/repositories/: create_user_repository.py  get_user_by_email_repository.py
src/data/usecases/: impl_register_user.py
src/data/validators/: interface.py  password.py
src/domain/models/: base.py  user.py
src/domain/usecases/: login_usecase.py  register_user_usecase.py
src/domain/validators/: email_available_validator.py
src/presentation/http/exceptions/: bad_request.py  conflict.py  forbidden.py  http_exception.py  not_found.py  unauthorized.py
