[project]
name = "auth"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "victorgabrieldeon", email = "victordeonroyale@gmail.com"},
]
dependencies = [
    "commitizen>=3.29.0",
    "pydantic>=2.9.0",
    "fastapi>=0.114.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
